--- a/extent-reports/extent-report.html
+++ b/extent-reports/extent-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar 19, 2025 11:03:03 pm</span></a>
+<a href="#"><span class="badge badge-primary">Mar 20, 2025 08:04:23 am</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Google Search Selenium Test</p>
             <p class="text-sm">
-              <span>11:03:07 pm</span> / <span>00:00:02:211</span>
+              <span>8:04:28 am</span> / <span>00:00:01:809</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Google Search Selenium Test</h5>
-<span class='badge badge-success'>03.19.2025 11:03:07 pm</span>
-<span class='badge badge-danger'>03.19.2025 11:03:10 pm</span>
-<span class='badge badge-default'>00:00:02:211</span>
+<span class='badge badge-success'>03.20.2025 8:04:28 am</span>
+<span class='badge badge-danger'>03.20.2025 8:04:30 am</span>
+<span class='badge badge-default'>00:00:01:809</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -105,21 +105,21 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:03:07 pm</td>
+        <td>8:04:28 am</td>
         <td>
           Navigating to Google
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:03:09 pm</td>
+        <td>8:04:30 am</td>
         <td>
           Searching for 'selenium'
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:03:10 pm</td>
+        <td>8:04:30 am</td>
         <td>
           Page title contains 'google'
         </td>
@@ -143,13 +143,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar 19, 2025 11:03:03 pm</h3>
+<h3>Mar 20, 2025 08:04:23 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar 19, 2025 11:03:10 pm</h3>
+<h3>Mar 20, 2025 08:04:30 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -219,7 +219,7 @@
 </div></div>
 <script>
 var timeline = {
-"Google Search Selenium Test":2.211
+"Google Search Selenium Test":1.809
 };
 </script>
 <div class="row">
